--- a/spring-vote-client.properties
+++ b/spring-vote-client.properties
@@ -1,1 +1,11 @@
-text.greeting=hello 
+spring:
+  application:
+    name: vote-client
+server:
+  port: 8081
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+  instance:
+    preferIpAddress: true
